refactor : unmdofiableList에서 copyOf로 변경